# json-scada

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dnp3  Dockerfile-grafana  Dockerfile-mongodb  Dockerfile-timescaledb  README.md  README_ua.md  acknowledgements.md  acknowledgements.txt  acnowledgements-ua.txt  index.md
.github/: FUNDING.yml
.github/workflows/: PLCTagsClient.yml  calculations-go.yml  dnp3-client-dotnet-core.yml  dotnet-core.yml  i104m-go.yml  lib60870-dotnet-core.yml  libplctag.yml
.idx/: dev.nix
compile-docker/: Dnp3Client.csproj  OPC-DA-Client.csproj  README.md  docker-compose.yaml
conf/: Opc.Ua.DefaultClient.Config.xml  README.md  README_ua.md  json-scada.json
conf-templates/: Opc.Ua.DefaultClient.Config.xml.ori  config_viewers.js  customized_module.js  json-scada-config.xlsm  json-scada-config_libreoffice_for_linux.ods  json-scada-config_libreoffice_for_windows.ods  json-scada.json  log.io-file.json  nginx.conf  nginx.crt  nginx_access_control.conf  nginx_http.conf  nginx_https.conf  openssl.cnf  pg_hba.conf  php.ini  postgresql.conf  screen_list.js  supervisord.conf  telegraf.conf
conf-templates/grafana-dashboards/: JSON SCADA Filtered Group1_2.json  JSON SCADA History Analog.json  JSON SCADA History Digital.json  JSON SCADA History-1598966522999.json
demo-docker/: README.md  README_ua.md  docker-compose-alt.yaml  docker-compose-method2.yaml  docker-compose.yaml
demo-docker/conf/: nginx.conf  telegraf.conf
demo-docker/grafana_data/: grafana.db
demo-docker/postgres_seed/: init-user-db.sh
demo-docker/sql/: process_pg_hist.sh  process_pg_rtdata.sh
demo-docker/sql_data/: grafanaappdb.sql
docs/: DEVELOPER_GUIDE.md  JSON-SCADA_ARCHITECTURE.drawio  JSON-SCADA_Arquitecture.txt  JSON-SCADA_Connections.drawio  install.md  install_ua.md  report_generators.md  schema.md  schema_ua.md  ua_JSON-SCADA_ARCHITECTURE.drawio
grafana-dashboards/: JSON SCADA Filtered Group1_2-1598966542370.json
log/: README.md
mongo_seed/: a_rs-init.js  b_create-db.js  init.sh  realtime_data.json  roles.json  users.json
platform-linux/: build.sh  export_project.sh  import_project.sh  restart_processes.sh
platform-mac/: README.md  build.sh
platform-nix-idx/: README.md  build.sh  demo_connections.json  dev.nix  grafana.ini  mongod.conf  postgresql.conf  supervisord.conf
platform-rhel10/: dnp3client.ini  dnp3server.ini  iccp_client.ini  iccp_server.ini
platform-rhel9/: calculations.ini  cs_custom_processor.ini  cs_data_processor.ini  grafana.ini  iec104client.ini  iec104server.ini  inkscape-plus-sage.sh  json-scada-install-aarch64.sh  json-scada-install.sh  json_scada_http.conf  json_scada_https.conf  metabase.ini  mongod.conf  mongofw.ini  mongowr.ini  mqtt-sparkplug.ini  nginx.conf  nginx_https.conf  opcua_client.ini  opcua_server.ini  plc4xclient.ini  postgresql.conf  process_pg_hist.ini  process_pg_rtdata.ini  server_realtime_auth.ini  supervisord.conf  telegraf-input-mqtt.conf  telegraf-input-opcua.conf  telegraf_listener.ini
platform-ubuntu-2404/: cs_custom_processor.ini  cs_data_processor.ini  iccp_client.ini  iccp_server.ini  iec104server.ini  inkscape-plus-sage.sh  json-scada-install.sh  json_scada_https.conf  metabase.ini  mongod.conf  mongofw.ini  nginx.conf  opcua_client.ini  pg_hba.conf  plc4xclient.ini  postgresql.conf  process_pg_hist.ini  server_realtime_auth.ini  supervisord.conf  telegraf-input-mongodb.conf  telegraf-output-json-scada.conf  telegraf_listener.ini
platform-ubuntu-2604/: dnp3_client.ini  json-scada-install.sh
platform-windows/: OPC Core Components Redistributable (x64) 3.00.108.msi  build.bat  build_msys2.sh  buildupd.bat  create_services.bat  export_project.bat  grafana-start.bat  import_project.bat  initial_setup.bat  json-scada.nsi  kill_processes_by_pattern.ps1  mongodb-start.bat  mongodb-stop.bat  postgresql-create_service.bat  postgresql-initdb.bat  postgresql-start.bat  postgresql-stop.bat  release_notes.txt  remove_jsonscada_services.ps1  remove_services.bat  restart_protocols.bat  restart_services.bat  start_protocols.bat  start_services.bat  stop_protocols.bat  stop_services.bat  timescaledb-setup.bat
platform-windows-installer/: json-scada.nsi  release_notes.txt
platform-windows/inkscape-extension/: scada.inx  scada.py
platform-windows/mongodb-conf/: mongod - tls.cfg  mongod.cfg
prod-docker/: README.md  README_ua.md  docker-compose.yaml  powerbi-json-scada-demo.pbix
prod-docker/conf/: json-scada.json
prod-docker/postgres_seed/: init-user-db.sh
prod-docker/sql/: process_pg_hist.sh
prod-docker/svg/: igconfig.txt  screen_list.js
sql/: README.md  create_tables.sql  delete_old.sh  delete_old.sql  grafanaappdb.sql  process_pg_hist.bat  process_pg_hist.sh  process_pg_rtdata.bat  process_pg_rtdata.sh  terminate_pg_hist.bat  terminate_pg_rtdata.bat
src/AdminUI/: .gitignore  README.md  index.html  package-lock.json  package.json  translate.bat  vite.config.mjs
src/OPC-DA-Client/: AsduReceiveHandler.cs  Common_srv_cli.cs  MongoCommands.cs  MongoUpdate.cs  OPC-DA-Client.csproj  OPC-DA-Client.sln  Program.cs  README.md  Redundancy.cs  TagsCreation.cs
src/OPC-DA-Server/: OPC-DA-Server.sln  README.md
src/OPC-UA-Client/: AsduReceiveHandler.cs  Common_srv_cli.cs  MongoCommands.cs  MongoUpdate.cs  OPC-UA-Client.csproj  OPC-UA-Client.sln  (+4 more)
src/dnp3/Dnp3ClientCpp/: CMakeLists.txt  README.md  autocreate.cpp  connection.cpp  dnp3client.h  main.cpp  mongo.cpp  soe_handler.cpp  soe_handler.h  utils.cpp
src/dnp3/Dnp3Server/: CMakeLists.txt  README.md  main.cpp
src/dnp3/opendnp3/cpp/json-scada-drivers/Dnp3Server/: CMakeLists.txt  main.cpp
src/libiec61850/examples/iec61850_client_example_ClientGooseControl/: CMakeLists.txt  Makefile  client_example_ClientGooseControl.c
src/libiec61850/examples/iec61850_client_example_ClientGooseControlAsync/: CMakeLists.txt  Makefile  client_example_ClientGooseControlAsync.c
src/libiec61850/examples/iec61850_client_example_rcbAsync/: CMakeLists.txt  Makefile  client_example_rcbAsync.c
svg/: screen_list.js
tmp/: .README
(+1259 files in other folders)
